--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.html",
   "scripts": {
     "devserver": "live-server",
-    "watch:sass": "sass sass/main.scss css/style.css -w",
+    "watch:sass": "sass src/sass/main.scss src/css/style.css -w",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass sass/style.scss css/style.comp.css",
-    "prefix:css": "postcss use --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "compile:sass": "node-sass src/sass/style.scss src/css/style.comp.css",
+    "prefix:css": "postcss use --use autoprefixer -b 'last 10 versions' src/css/style.comp.css -o src/css/style.prefix.css",
+    "compress:css": "node-sass src/css/style.prefix.css src/css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "keywords": [
