--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "devserver": "live-server src/",
     "watch:sass": "sass src/sass/main.scss src/css/style.css -w",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass src/sass/style.scss src/css/style.comp.css",
+    "compile:sass": "sass src/sass/main.scss src/css/style.comp.css",
     "prefix:css": "postcss use --use autoprefixer -b 'last 10 versions' src/css/style.comp.css -o src/css/style.prefix.css",
     "compress:css": "node-sass src/css/style.prefix.css src/css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "keywords": [
     "coding",
