Added a homescreen/dashboard - This is the screen a user will see once signed in

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ src/css/style.css.map
 src/css/style.comp.css
 src/css/style.comp.css.map
 src/css/style.prefix.css
+src/img/icons/demo.html
+src/img/icons/Readme.txt
+src/img/icons/style.css
